Fixed about to work on mobile

--- a/_/css/bw_style.css
+++ b/_/css/bw_style.css
@@ -61,7 +61,11 @@ a:active {
     margin-bottom : 20px;
   }
   .hidden-small3 {
-    margin-right 10px;
+    margin-right: 10px;
+  }
+  .right-big {
+    margin-bottom: 10px;
+    margin-right: 10px;
   }
 }
 
@@ -94,6 +98,11 @@ a:active {
   } 
   .right {
     padding-left: 10px;
+  }
+  .right-big {
+    padding-left: 10px;
+    float: right;
+    padding-right: 20px; 
   }
 }
 
